Fix: Contrast issues.

--- a/styles/base/variables.css
+++ b/styles/base/variables.css
@@ -8,6 +8,7 @@
     --color-button-dark: #333333;
 
     --color-text-white: #fefefe;
+    --color-text-light: #b3b3b3;
     --color-text-muted: #747474;
 
     /* Font size */
